<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="#FFECB3">

    <TextView android:text="@string/title_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:textColor="#000"
        android:layout_marginBottom="30dp"/>

    <Button
       style="@style/CommonAppButton"
        android:text="@string/label_spotify_streamer"
        android:id="@+id/btn_streamer"
        android:onClick="openStreamer"
        android:background="#0D47A1"/>

    <Button
        style="@style/CommonAppButton"
        android:text="@string/label_scores_app"
        android:id="@+id/btn_score"
        android:layout_gravity="center_horizontal"
        android:background="#1565C0"
        android:onClick="openScores"/>

    <Button
        style="@style/CommonAppButton"
        android:text="@string/label_library_app"
        android:id="@+id/btn_library"
        android:layout_gravity="center_horizontal"
        android:onClick="openLibrary"
        android:background="#1976D2"/>

    <Button
        style="@style/CommonAppButton"
        android:text="@string/label_build_bigger"
        android:id="@+id/btn_build_bigger"
        android:layout_gravity="center_horizontal"
        android:onClick="openBuildBigger"
        android:background="#1E88E5"/>

    <Button
        style="@style/CommonAppButton"
        android:text="@string/label_xyz_reader"
        android:id="@+id/btn_xyz"
        android:layout_gravity="center_horizontal"
        android:onClick="openXYZ" />

    <Button
        style="@style/CommonAppButton.Own"
        android:text="@string/label_my_own"
        android:id="@+id/btn_own"
        android:layout_gravity="center_horizontal"
        android:onClick="openCapstone"/>


</LinearLayout>
